# world_models

./: pyproject.toml
configs/: atari100k.yaml  atari100kmamba.yaml  atari20k.yaml  atari_template.yaml
scripts/: benchmark_sequence_models.py  sweep_atari100k.sh
tests/: test_sequence_models.py  test_smoke.py
world_models/buffers/: buffers.py  prioritized.py
world_models/torch/agents/: actor_critic.py  agent.py  builder.py  models.py  train.py  world_model.py
world_models/torch/common/: decoders.py  distributions.py  encoders.py  heads.py  models.py  objectives.py  sequence_models.py  utils.py
world_models/torch/dreamer/: models.py  world_model.py
world_models/utils/: logger.py
